clusters/nuc/megadetector/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  labels:
    app.kubernetes.io/name: megadetector-service
    app.kubernetes.io/component: detection-api
    app.kubernetes.io/part-of: megadetector
    app.kubernetes.io/managed-by: kustomize
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: megadetector-service
    app.kubernetes.io/component: detection-api
    app.kubernetes.io/part-of: megadetector
    app.kubernetes.io/managed-by: kustomize
spec:
  forwardAuth:
    address: https://keycloak.int.linuxalert.org
    trustForwardHeader: true
