clusters/nuc/megadetector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: megadetector
  labels:
    app.kubernetes.io/part-of: megadetector
