clusters/nuc/megadetector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: megadetector-service
  labels:
    app.kubernetes.io/name: megadetector-service
    app.kubernetes.io/component: detection-api
    app.kubernetes.io/part-of: megadetector
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: megadetector-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
